--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -194,12 +194,12 @@
                 
                         <div class="">
                             <div class="card-body">
-                              <a href="{{ post.url | prepend:site.baseurl }}">
+                              <a >
             
                                 <h5 class="card-title">{{ post.title }}</h5>
                               </a>
                                 <p class="small"><strong>{{ post.author | join: " , "  }}</strong></p>
-                                <p>{{ post.date | date: '%b %d, %Y' }}
+                                <p>{{ post.date | date: '%b , %Y' }}
                                 </p>
                                 
                             </div>
